# DocumentGenerationAnek

./: .dockerignore  .env.example  .env.prod.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.tunnel.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Desktop/: Google Chrome.lnk
_runrepo/: .dockerignore  .env.tunnel.example  .gitignore  CONSTRUCTOR_MODEL.md  DOMAIN.md  README.md  celerybeat-schedule  docker-compose.hetzner.yml  docker-compose.yml  main.py
_runrepo/app/: __init__.py
_runrepo/docker/: entrypoint.sh
_runrepo/docs/: README.md  api-contract.md  authorization.md  constructor-schema.md  environment.md  operations.md  templates.md
_runrepo/migrations/: README  script.py.mako
_runrepo/scripts/: backup_postgres.py  quality_gate.py  restore_minio.py  restore_postgres.py  (+1 more)
app/: main.py
docs/: README.md  api-contract.md  architecture.md  authorization.md  cloudflare-tunnel-demo.md  constructor-schema.md  environment.md  frontend-integration.md  generation-lifecycle.md  hetzner-deployment.md  release-checklist.md  setup.md  templates.md
frontend/: .env.example  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
migrations/: env.py
scripts/: backup_minio.py  run_restore_drill.py
tests/: conftest.py  test_billing_service.py  test_config_secrets.py  test_document_request_validation.py  test_generation_formatting.py  test_health.py  test_migrations.py  test_template_import_confirmation_service.py  test_variable_mapper_service.py  test_worker_tasks.py
(+236 files in other folders)
